2005-07-28  Graydon Hoare  <graydon@redhat.com>

	* elaborate.cxx (derived_probe::derived_probe): Accept NULL probe.
	* staptree.cxx (provide, require): Move from here...
	* staptree.h: to here, and virtualize deep-copy methods.
	* translate.cxx 
	(c_unparser::emit_common_header): Include loc2c-runtime.h	
	* tapsets.cxx 
	(dwflpp::iterate_over_modules): Use new, faster getmodules loop.
	(dwflpp::literal_stmt_for_local): New method, call loc2c.
	(var_expanding_copy_visitor): New struct which expands $-vars.
	(dwarf_derived_probe): Rebuild this->body using var expander.
	(query_function): Refactor logic a bit for speed.
	* loc2c.{c,h}: Copies (with minor changes) of Roland's work 
	from elfutils CVS.
	* Makefile.am (AM_CFLAGS): Set to elfutils-style.
	(stap_SOURCES): Add loc2c.c.
	* Makefile.in: Regenerate.

2005-07-28  Frank Ch. Eigler  <fche@redhat.com>

	* stap.1: Beginnings of a man page.
	* Makefile.am: Install it.  Comment out stpd LDADD goodies.
	* configure.ac: Futilely complain about non-stpd LIBS.
	* Makefile.in, configure.in: Regenerated.
	* main.cxx (usage): Remove ARGS from help text, as nothing is
	done with these yet.

2005-07-28  Frank Ch. Eigler  <fche@redhat.com>

	* translate.cxx: Add "pt_regs*" field to context.
	* tapsets.cxx (*): Correct kprobes API interface.
	* testsuite/buildok/three.stp: New test, copied from semok.
	* Makefile.am (install-data-local): Also install runtime/relayfs,
	so scripts can build against headers located thereunder. 
	* Makefile.in: Regenerated.
	
2005-07-28  Frank Ch. Eigler  <fche@redhat.com>

	translator/1120
	* main.cxx (main): Preset -R and -I options from environment
	variables (if set).  Pass guru mode flags to parser.
	* parse.cxx (privileged): New parser operation flag.  Update callers.
	(parse_embeddedcode): Throw an error if !privileged.
	(parse_functiondecl): Change signature.  Prevent duplicates.
	(parse_globals): Ditto.
	* parse.h: Corresponding changes.