@@ -1,3 +1,7 @@
+2005-07-28  Frank Ch. Eigler  <fche@elastic.org>
+
+	* elaborate.cxx (find_var): Correct array dereferencing thinko.
+
 2005-07-28  Graydon Hoare  <graydon@redhat.com>
 
 	* elaborate.cxx (derived_probe::derived_probe): Accept NULL probe.
